css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

 * {
 	font-size: 100%;
 	font-family: 'Montserrat';
 }

 body {
 	overflow-x: hidden;
 }

 .disableselect {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
    cursor: default;
 }

 .bgletterB {
 	text-shadow: 0 5px 10px rgba(0,0,0,.125);
 	font-size: 1000px;
 	color: #3361EF;
 	position: absolute;
 	top: -35vw;
 	left: -5vw;
 	transform: rotateZ(-25deg);
 	z-index: 0;
 }

 .bgletterK {
 	text-shadow: 0 5px 10px rgba(0,0,0,.125);
 	font-size: 1000px;
 	color: #3361EF;
 	position: absolute;
 	top: -35vw;
 	right: -5vw;
 	transform: rotateZ(+25deg);
 	z-index: 0;
 }

 .bgletterO {
 	text-shadow: 0 5px 10px rgba(0,0,0,.125);
 	font-size: 1000px;
 	color: #FFFDF8;
 	position: absolute;
 	top: -25vw;
 	left: -25vw;
 	z-index: 0;
 }

 @media all and (max-width: 1100px) {
 	.bgletterB, .bgletterK {
 		font-size: 700px;
 		top:-15vw;
 	}
 }

 @media all and (max-width: 800px) {
 	.bgletterB, .bgletterK {
 		font-size: 500px;
 		top:-5vw;
 	}
 }

 @media all and (max-width: 580px) {
 	.bgletterB, .bgletterK {
 		font-size: 400px;
 	}
 }

 @media all and (max-width: 480px) {
 	.bgletterB, .bgletterK {
 		font-size: 300px;
 	}
 }

 .allcaps {
 	text-transform: uppercase;
 }

 #index-banner {
 	background-color: #3361EF;
 	height: 600px;
 	min-height: 410px;
 	position: relative;
 }

 h1.header {
 	font-weight: bold;
 	letter-spacing: -3px;
 	text-shadow: 0px 2px 6px #303934;
 	margin-bottom: 0;
 	position: relative;
 }

 h5.header {
 	position: relative;
 }

 #download-button {
 	transform: translateY(50%);
 }

 .carousel {
 	min-width: 640px;
 	width: 60%;
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
 	z-index: 1;
 }

 .carousel .indicators .indicator-item {
 	background-color: #E1E1E1;
 }

 .carousel .indicators .indicator-item.active {
 	background-color: #3361EF;
 }

 .carousel.carousel-slider .carousel-item {
 	min-height: 220px;
 }

 .carleft {
 	width: 50%;

 	margin-top: 0;
 	margin-bottom: 0;

 	padding-left: 5%;
 	padding-right: 5%;

 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);

 	font-size: 2.5em !important;
 	font-weight: bold !important;
 	color: #303934;

 	text-shadow: 1px 0 #303934;
 	letter-spacing: 1px;
 	line-height: 1em !important;
 }

 @media all and (max-width: 730px) {
 	.carleft {
 		font-size: 2.0em !important;
 	}

 	.carright {
 		font-size: 0.9em !important;
 	}

 	.carousel {
 		min-width: 500px;
 	}
 }

 .carright {
 	width: 50%;

 	margin-top: 0;
 	margin-bottom: 0;

 	padding-left: 5%;
 	padding-right: 5%;

 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
 }

 #middle-section {
 	background-color: #FFFDF8;
 	height: 830px;
 	position: relative;

 }

 @media all and (max-width: 600px) {
 	#middle-section {
 		height: 415px !important;
 	}
 }

 #h2topsmall {
 	color: #3361EF;
 	font-size: 1.4em;
 	font-weight: bold;
 	margin-top: 0;
 	margin-bottom: 0;
 	position: relative;
 }

 #h2bottombig {
 	font-size: 5em;
 	color: #303934;
 	font-weight: bold;
 	margin-top: 0;
 	margin-bottom: 0;
 	line-height: 0.8em;
 	position: relative;
 }

 #pbold {
 	font-weight: bold;
 	margin-top: 0;
 	position: relative;
 }

 #pord {
 	position: relative;
 }

 #contact-section {
 	background-color: #303934;
 	height: 600px;
 	min-height: 300px;
 	clear: both;
 	position: relative;
 }

 #contact-form {
 	width: 85%;
 }

 #getintouch {
 	clear: both;
 	font-weight: bold;
 }

 .contactfield {
 	font-size: 1.2em !important;
 }

 #submitbutton {
 	background-color: #3361EF;
 }

 .waves-effect.waves-blueish .waves-ripple {
 	background-color: rgba(51, 97, 239, 0.65);
 }

 #name, #email, #phone {
 	border-bottom-color: white;
 	box-shadow: 0px 0px 0px white;
 	color: white;
 }

 @media all and (max-width: 500px) {
 	h1.header {
 		font-size: 2.5em;
 	}

 	h5.header {
 		font-size: 1.4em;
 	}

 	#getintouch {
 		font-size: 3em;      
 	}

 	#h2bottombig {
 		font-size: 2.5em !important;
 	}

 	#middle-right {
 		float: left !important;
 	}
 }

